--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Adgamus_Mobil"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterMain"
+            android:exported="false" />
+        <activity
+            android:name=".LoginMain"
+            android:exported="false" />
+        <activity
             android:name=".Menu_Principal"
             android:exported="false" />
         <activity
