--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Oct 22 01:02:14 CST 2023
-sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
+#Mon Nov 06 12:15:10 GMT-06:00 2023
+sdk.dir=C\:\\Users\\Alumno\\AppData\\Local\\Android\\Sdk
