--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 17 18:10:24 CST 2023
-sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
+#Fri Nov 17 21:18:41 CST 2023
+sdk.dir=C\:\\Users\\vaega\\AppData\\Local\\Android\\Sdk
