Login_Register_Validado

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Fri Nov 17 21:18:41 CST 2023
-sdk.dir=C\:\\Users\\vaega\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
