--- a/local.properties
+++ b/local.properties
@@ -4,9 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Thu Nov 16 10:07:50 GMT-06:00 2023
-=======
-#Thu Nov 16 08:24:01 GMT-06:00 2023
->>>>>>> origin/Look_and_feel
-sdk.dir=C\:\\Users\\Alumno\\AppData\\Local\\Android\\Sdk
+#Sat Nov 18 16:08:16 CST 2023
+sdk.dir=C\:\\Users\\vaega\\AppData\\Local\\Android\\Sdk
