--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 22 18:41:28 CST 2023
-sdk.dir=C\:\\Users\\vaega\\AppData\\Local\\Android\\Sdk
+#Sun Dec 10 17:45:02 CST 2023
+sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
