--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,22 +17,19 @@
         tools:targetApi="31">
         <activity
             android:name=".Log_Sign_Main"
-            android:exported="false" />
-        <activity
-            android:name=".Log_sig_main"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterMain"
-            android:exported="false" />
-        <activity
-            android:name=".LoginMain"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".Menu_Principal"
-            android:exported="false" />
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity"/>
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
