--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Dec 10 17:45:02 CST 2023
-sdk.dir=C\:\\Users\\Windows\\AppData\\Local\\Android\\Sdk
+#Thu Feb 22 07:07:57 CST 2024
+sdk.dir=C\:\\Users\\Alumno\\AppData\\Local\\Android\\Sdk
